--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>Histogram</title>
 
     <!-- Foundation -->
-    <link rel="stylesheet" href="/bin/bower/foundation/css/foundation.min.css">
+    <link rel="stylesheet" href="bin/bower/foundation/css/foundation.min.css">
   </head>
   <body>
     <div id="main"></div>
 
     <!-- jQuery -->
-    <script type="text/javascript" src="/bin/bower/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bin/bower/jquery/dist/jquery.min.js"></script>
 
     <!-- Foundation -->
-    <script type="text/javascript" src="/bin/bower/foundation/js/foundation.min.js"></script>
+    <script type="text/javascript" src="bin/bower/foundation/js/foundation.min.js"></script>
 
     <!-- Custom -->
-    <script type="text/javascript" src="/bin/index.js"></script>
+    <script type="text/javascript" src="bin/index.js"></script>
   </body>
 </html>
