--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Histogram</title>
+    <title>Character count</title>
 
     <!-- Foundation -->
     <link rel="stylesheet" href="bin/bower/foundation/css/foundation.min.css">
